# polcoin-core-obsolete

./: .gitignore  .travis.yml  COPYING  INSTALL  INSTALL.md  Makefile.am  README.md  configure.ac  libpolcoinconsensus.pc.in
build-aux/m4/: bitcoin_find_bdb48.m4  bitcoin_qt.m4  bitcoin_subdir_to_include.m4
contrib/: README.md  bitcoin-qt.pro  bitcoind.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  bitcoin-qt.desktop  bitcoin-qt.install  bitcoin-qt.lintian-overrides  bitcoin-qt.protocol  bitcoin-tx.install  bitcoind.bash-completion  bitcoind.examples  bitcoind.install  bitcoind.lintian-overrides  bitcoind.manpages  changelog  control  copyright  rules  watch
contrib/devtools/: README.md  fix-copyright-headers.py  update-translations.py
contrib/gitian-descriptors/: README.md  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win.yml
contrib/gitian-downloader/: linux-download-config  win32-download-config
contrib/init/: README.md  bitcoind.conf  bitcoind.openrc  bitcoind.openrcconf  bitcoind.service
contrib/linearize/: README.md  example-linearize.cfg  linearize-data.py  linearize-hashes.py
contrib/macdeploy/: DS_Store  README.md  background.psd  detached-sig-apply.sh  (+2 more)
depends/: README  README.usage  config.site.in
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  bootstrap.md  build-osx.md  build-unix.md  coding.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  multiwallet-qt.md  release-notes.md  release-process.md  tor.md  translation_process.md  travis-ci.txt  unit-tests.md
share/: setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  amount.cpp  amount.h  base58.cpp  base58.h  bitcoind.cpp  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  core_io.h  core_read.cpp  core_write.cpp  crypter.cpp  crypter.h  (+89 more)
src/compat/: glibc_compat.cpp  glibc_sanity.cpp  glibcxx_compat.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/config/: bitcoin-config.h.in  polcoin-config.h
src/crypto/: common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  rfc6979_hmac_sha256.cpp  rfc6979_hmac_sha256.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/leveldb/: Makefile
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: README.md  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bitcoin.qrc  bitcoinamountfield.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  networkstyle.h  notificator.cpp  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  (+67 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_pl.ts  polcoin_ach.ts  polcoin_af_ZA.ts  polcoin_ar.ts  polcoin_be_BY.ts  polcoin_bg.ts  polcoin_bs.ts  polcoin_ca.ts  polcoin_ca@valencia.ts  polcoin_ca_ES.ts  polcoin_cmn.ts  polcoin_cs.ts  polcoin_cy.ts  polcoin_da.ts  polcoin_de.ts  polcoin_el_GR.ts  polcoin_en.ts  polcoin_eo.ts  polcoin_es.ts  polcoin_es_CL.ts  polcoin_es_DO.ts  polcoin_es_MX.ts  polcoin_es_UY.ts  polcoin_et.ts  polcoin_eu_ES.ts  polcoin_fa.ts  polcoin_fa_IR.ts  polcoin_fi.ts  polcoin_fr.ts  polcoin_fr_CA.ts  polcoin_gl.ts  polcoin_gu_IN.ts  polcoin_he.ts  polcoin_hi_IN.ts  polcoin_hr.ts  polcoin_hu.ts  polcoin_id_ID.ts  polcoin_it.ts  polcoin_ja.ts  polcoin_ka.ts  (+32 more)
src/qt/res/: bitcoin-qt-res.rc  polcoin-qt-res.rc
src/qt/res/icons/: polcoin.icns
src/qt/test/: paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/rpc/: net.cpp  rawtransaction.cpp  server.cpp
src/script/: interpreter.cpp  interpreter.h  polcoinconsensus.cpp  polcoinconsensus.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/src/java/: org_bitcoin_NativeSecp256k1.c  org_bitcoin_NativeSecp256k1.h
src/secp256k1/src/java/org/polcoin/: NativeSecp256k1.java
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  README.md  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bignum.h  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  main_tests.cpp  mempool_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  polcoin-util-test.py  rpc_tests.cpp  rpc_wallet_tests.cpp  sanity_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum_tests.cpp  serialize_tests.cpp  sighash_tests.cpp  sigopcount_tests.cpp  skiplist_tests.cpp  test_polcoin.cpp  timedata_tests.cpp  transaction_tests.cpp  (+3 more)
src/test/data/: README.md  polcoin-util-test.json  sighash.json  tx_valid.json
src/univalue/: gen.cpp  univalue.h  univalue_escapes.h
src/util/: system.cpp  time.cpp
(+110 files in other folders)
